@@ -28,31 +28,16 @@
 # (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 # OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
-
-import re
-from types import ListType, TupleType
-from cStringIO import StringIO
-from rfc822 import Message
+from zope.contenttype import guess_content_type
 
 from AccessControl import ClassSecurityInfo
-from Acquisition import aq_base
 from App.class_init import InitializeClass
 from OFS.Image import File
 from Products.Archetypes.Field import TextField, FileField
-from Products.Archetypes.interfaces.marshall import IMarshall
-from Products.Archetypes.interfaces.layer import ILayer
 from Products.Archetypes.interfaces.base import IBaseUnit
 from Products.Archetypes.debug import log
 from Products.Archetypes.utils import shasattr
 from Products.Archetypes.utils import mapply
-
-try:
-    from zope.contenttype import guess_content_type
-except ImportError: # BBB: Zope < 2.10
-    try:
-        from zope.app.content_types import guess_content_type
-    except ImportError: # BBB: Zope < 2.9
-        from OFS.content_types import guess_content_type
 
 from base import Marshaller
 
