@@ -33,24 +33,12 @@ from types import ListType, TupleType
 from cStringIO import StringIO
 from rfc822 import Message
 
-from AccessControl import ClassSecurityInfo
-from Acquisition import aq_base
-from App.class_init import InitializeClass
-from OFS.Image import File
-from Products.Archetypes.Field import TextField, FileField
-from Products.Archetypes.interfaces.marshall import IMarshall
-from Products.Archetypes.interfaces.layer import ILayer
-from Products.Archetypes.interfaces.base import IBaseUnit
-from Products.Archetypes.utils import shasattr
-from Products.Archetypes.utils import mapply
+from zope.contenttype import guess_content_type
 
-try:
-    from zope.contenttype import guess_content_type
-except ImportError: # BBB: Zope < 2.10
-    try:
-        from zope.app.content_types import guess_content_type
-    except ImportError: # BBB: Zope < 2.9
-        from OFS.content_types import guess_content_type
+from AccessControl import ClassSecurityInfo
+from App.class_init import InitializeClass
+from Products.Archetypes.interfaces.base import IBaseUnit
+from Products.Archetypes.utils import mapply
 
 from base import Marshaller
 
